# Zoe2Mars_Redcase

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Zoe2Mars_Mod.slnx  Zoe2Mars_Redcase.slnx  vcpkg-configuration.json  vcpkg.json
Assets/Samples/: Build_And_Copy(Auto - Verbose).bat  Build_And_Copy(Auto - Verbose)_DemoVersion.bat  Build_And_Copy(Auto).bat  Build_And_Copy(Auto)_DemoVersion.bat  Build_And_Copy(DataCnf - Verbose).bat  Build_And_Copy(DataCnf - Verbose)_DemoVersion.bat  Build_And_Copy(DataCnf).bat  Build_And_Copy(DataCnf)_DemoVersion.bat  Extract (Verbose).bat  Extract.bat
Samples/: Build and copy - Verbose.bat  Build and copy.bat  Extract Verbose.bat  Extract.bat
Shared/AudioManager/: AudioManager.cpp  AudioManager.h
StageDec/: CMakeLists.txt  DataConfig.cpp  DataConfig.h  Globals.h  StageDAT.cpp  StageDAT.h  StageDec.cpp  StageDec.h  StageDec.vcxproj  StageDec.vcxproj.filters  Utility.cpp  Utility.h  pch.h  strlist.txt
StageDec/include/: StageDAT.h  StageDec.h
StageDec/res/: strlist.txt
StageDec/src/: StageDAT.cpp  StageDec.cpp  Utility.cpp
Zoe2Mars_Mod64/: InfoAboutLoading.txt  Mod.cpp  ModPanel.cpp  Mod_PropertySheet.props  dllmain.cpp  zoe2mars_mod64.vcxproj  zoe2mars_mod64.vcxproj.filters
Zoe2Mars_Mod64/GameTypes/Jehuty/: Jehuty.h
Zoe2Mars_Mod64/ModAssets/: Settings.ini
Zoe2Mars_ModLauncher/: Zoe2Mars_ModLauncher.cpp  Zoe2Mars_ModLauncher.vcxproj  Zoe2Mars_ModLauncher.vcxproj.filters
Zoe2Mars_Redcase/: CMakeLists.txt  GameOffsets.h  Hooks.cpp  Hooks.h  Mod.h  ModPanel.cpp  ModPanel.h  Zoe2Mars_Redcase.vcxproj  Zoe2Mars_Redcase.vcxproj.filters  pch.h
Zoe2Mars_Redcase/GameTypes/Jehuty/: Jehuty.h
Zoe2Mars_Redcase/ModAssets/: DefaultOffsets.json  Settings.ini  Sounds.json
Zoe2Mars_Redcase/include/: ModPanel.h  PtrTypedefs.h  SoundTest.h  pch.h
Zoe2Mars_Redcase/src/: Hooks.cpp  Mod.cpp  ModPanel.cpp  dllmain.cpp  exports.def
Zoe2Mars_Redcase_Launcher/: CMakeLists.txt  Zoe2Mars_Redcase_Launcher.cpp  Zoe2Mars_Redcase_Launcher.vcxproj  Zoe2Mars_Redcase_Launcher.vcxproj.filters  resource.h
Zoe2Mars_Redcase_Launcher/src/: Zoe2Mars_Redcase_Launcher.cpp
